UX: Set width on hamburger menu drop down to prevent overflow (#17607)

--- a/app/assets/stylesheets/common/base/menu-panel.scss
+++ b/app/assets/stylesheets/common/base/menu-panel.scss
@@ -572,6 +572,14 @@ div.menu-links-header {
 // Sidebar-hamburger hybrid
 
 .hamburger-menu.revamped {
+  .panel-body {
+    width: 100%;
+
+    .panel-body-content {
+      width: 100%;
+    }
+  }
+
   .sidebar-section-wrapper {
     .sidebar-section-header-button {
       opacity: 1;
